--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:setWifiDataList="@{viewmodel.wifiList}" />
+            setWifiDataList="@{viewmodel.wifiList}" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
