--- a/app/src/main/res/layout/item_wifi.xml
+++ b/app/src/main/res/layout/item_wifi.xml
@@ -8,11 +8,16 @@
         <variable
             name="wifiitem"
             type="com.hometemperature.bean.WifiItem" />
+
+        <variable
+            name="clickListener"
+            type="com.hometemperature.ui.home.WifiListClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> clickListener.onClick(wifiitem)}">
 
         <ImageView
             android:id="@+id/iv_wifi_icon"
@@ -38,7 +43,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_wifi_icon"
             app:layout_constraintTop_toTopOf="@+id/iv_wifi_icon"
-            tools:text="@{wifiitem.name}" />
+            tools:text="@{wifiitem.wifiName}" />
 
         <TextView
             android:id="@+id/tv_wifi_status"
