修补了后台数据不能被接收的bug
Signed-off-by: Mamh <mamhsl@163.com>

--- a/app/src/main/res/layout/fragment_datacenter.xml
+++ b/app/src/main/res/layout/fragment_datacenter.xml
@@ -9,10 +9,17 @@
             type="com.hometemperature.ui.datacenter.DataCenterViewModel" />
     </data>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_data_list"
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/sw_datacenter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        setDataCenterList="@{viewmodel.dataList}"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_data_list"
+            setDataCenterList="@{viewmodel.dataList}"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
