--- a/app/src/main/res/layout/item_datacenter.xml
+++ b/app/src/main/res/layout/item_datacenter.xml
@@ -39,7 +39,7 @@
                 android:layout_marginLeft="@dimen/space10"
                 android:layout_marginRight="@dimen/space10"
                 android:layout_toEndOf="@id/receiver_item"
-                android:src="@drawable/ic_launcher_background"
+                android:background="@drawable/ic_datacenter_home"
                 tools:ignore="NotSibling" />
 
 
@@ -47,14 +47,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:layout_toEndOf="@+id/iv_receiver_photo"
-                android:gravity="center_vertical"
-                android:paddingRight="@dimen/space10">
+                android:gravity="center_vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="48sp"
                     android:background="@drawable/bg_chat_you">
 
                     <TextView
@@ -76,7 +74,7 @@
                         android:layout_marginTop="3dp"
                         android:textAppearance="@style/CardView.Light"
                         android:textColor="@color/colorTextInfo"
-                        android:textSize="@dimen/h3"
+                        android:textSize="@dimen/h1"
                         tools:text="@{item.data}" />
 
                     <TextView
@@ -114,7 +112,7 @@
                 android:layout_marginLeft="@dimen/space10"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="@dimen/space10"
-                android:src="@drawable/ic_launcher_background"
+                android:background="@drawable/ic_datacenter_me"
                 tools:ignore="NotSibling" />
 
             <RelativeLayout
@@ -122,8 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="48sp"
                 android:layout_toStartOf="@+id/iv_sender_photo"
                 android:background="@drawable/bg_chat_me">
 
@@ -148,7 +145,7 @@
                     android:layout_marginEnd="15dp"
                     android:textAppearance="@style/CardView.Light"
                     android:textColor="@color/colorTextInfo"
-                    android:textSize="@dimen/h3"
+                    android:textSize="@dimen/h1"
                     tools:text="@{item.data}" />
 
                 <TextView
