--- a/app/src/main/res/layout/item_datacenter.xml
+++ b/app/src/main/res/layout/item_datacenter.xml
@@ -61,6 +61,7 @@
                         style="@style/h2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
                         android:layout_marginStart="15dp"
                         android:textAppearance="@style/CardView.Light"
                         tools:text="@{item.event}" />
@@ -76,18 +77,6 @@
                         android:textColor="@color/colorTextInfo"
                         android:textSize="@dimen/h1"
                         tools:text="@{item.data}" />
-
-                    <TextView
-                        android:id="@+id/tv_receiver_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@id/tv_receiver_event"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="15dp"
-                        android:text="5:04pm"
-                        android:textAppearance="@style/CardView.Light"
-                        android:textColor="@color/colorTextBlack"
-                        android:textSize="@dimen/h4" />
 
 
                 </RelativeLayout>
