--- a/app/src/main/res/layout/fragment_console.xml
+++ b/app/src/main/res/layout/fragment_console.xml
@@ -256,7 +256,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="serif"
                         android:padding="2dp"
-                        android:text="18°C"
+                        android:text="@{viewmodel.currentTemperature.toString()}"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="18sp"
@@ -302,6 +302,7 @@
                         android:padding="2dp"
                         android:textAlignment="center"
                         android:textSize="18sp"
+                        android:checked="@{viewmodel.acSwitch}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
