--- a/app/src/main/res/layout/item_datacenter.xml
+++ b/app/src/main/res/layout/item_datacenter.xml
@@ -58,12 +58,15 @@
 
                     <TextView
                         android:id="@+id/tv_receiver_event"
-                        style="@style/h2"
+                        style="@style/TextAppearance.MaterialComponents.Headline2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="15dp"
+                        android:layout_marginEnd="@dimen/space15"
                         android:textAppearance="@style/CardView.Light"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
                         tools:text="@{item.event}" />
 
                     <TextView
@@ -73,6 +76,7 @@
                         android:layout_below="@id/tv_receiver_event"
                         android:layout_marginStart="15dp"
                         android:layout_marginTop="3dp"
+                        android:layout_marginEnd="@dimen/space15"
                         android:textAppearance="@style/CardView.Light"
                         android:textColor="@color/colorTextInfo"
                         android:textSize="@dimen/h1"
@@ -119,11 +123,12 @@
 
                 <TextView
                     android:id="@+id/tv_sender_event"
-                    style="@style/h2"
+                    style="@style/TextAppearance.MaterialComponents.Headline2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="15dp"
+                    android:layout_marginStart="@dimen/space15"
                     android:textAppearance="@style/CardView.Light"
                     android:textSize="20sp"
                     android:textStyle="bold"
