--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:tint="#FFFFFF"
     android:viewportWidth="108"
+    android:tint="#FFFFFF"
     android:viewportHeight="108">
     <group
         android:scaleX="1.9836"
@@ -11,9 +11,6 @@
         android:translateY="30.1968">
         <path
             android:fillColor="@android:color/white"
-            android:pathData="M8.17,5.7L1,10.48V21h5v-8h4v8h5V10.25z" />
-        <path
-            android:fillColor="@android:color/white"
-            android:pathData="M10,3v1.51l2,1.33L13.73,7L15,7v0.85l2,1.34L17,11h2v2h-2v2h2v2h-2v4h6L23,3L10,3zM19,9h-2L17,7h2v2z" />
+            android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
     </group>
 </vector>
