--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
     <color name="colorPurpleLight">#4B5980</color>
     <color name="colorPurpleDark">#3F4A68</color>
-    <color name="colorAccent">#FC3768</color>
+    <color name="colorAccent">#651FFF</color>
     <color name="colorTextBlack">#333333</color>
     <color name="colorTextHint">#e1e1e1</color>
     <color name="colorTextInfo">#9b9b9b</color>
