--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.HomeTemperatureControl" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#8BC34A</item>
-        <item name="colorPrimaryVariant">#4CAF50</item>
+        <item name="colorPrimary">#2979FF</item>
+        <item name="colorPrimaryVariant">#3D5AFE</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#03A9F4</item>
-        <item name="colorSecondaryVariant">#2196F3</item>
+        <item name="colorSecondary">#FF3D00</item>
+        <item name="colorSecondaryVariant">#FFEA00</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
